// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Component) Users should render when loading correctly 1`] = `
<React.Fragment>
  <section
    className="cards"
  >
    <ActionBar
      desc="Manage users that can access the administrative panel"
      title="Users"
    >
      <Component
        onClick={[Function]}
        text="+ Register user"
      />
    </ActionBar>
    <div
      className="row"
    >
      <Card
        cols={8}
      >
        <div
          className="content"
        >
          <Loader />
        </div>
      </Card>
    </div>
  </section>
</React.Fragment>
`;

exports[`(Component) Users should render when not loading correctly 1`] = `
<React.Fragment>
  <section
    className="cards"
  >
    <ActionBar
      desc="Manage users that can access the administrative panel"
      title="Users"
    >
      <Component
        onClick={[Function]}
        text="+ Register user"
      />
    </ActionBar>
    <div
      className="row"
    >
      <Card
        cols={8}
      >
        <div
          className="content"
        >
          <Table
            actions={
              Array [
                Object {
                  "label": "Change password",
                  "onClick": [Function],
                },
                Object {
                  "label": "Delete",
                  "onClick": [Function],
                },
              ]
            }
            columns={
              Object {
                "id": Object {
                  "title": "ID",
                },
                "username": Object {
                  "title": "Username",
                },
              }
            }
            rows={
              Array [
                Object {
                  "id": 1,
                  "username": "admin",
                },
                Object {
                  "id": 2,
                  "username": "joe",
                },
                Object {
                  "id": 3,
                  "username": "marc",
                },
                Object {
                  "id": 4,
                  "username": "gina",
                },
              ]
            }
          />
        </div>
      </Card>
    </div>
  </section>
</React.Fragment>
`;
